--- a/application/client/src/styles/Driver.css
+++ b/application/client/src/styles/Driver.css
@@ -7,7 +7,6 @@
 }
 
 .driver-dashboard {
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,7 +33,7 @@
   overflow-y: hidden;
 }
 
-.unaccepted-order {
+.driver-unaccepted-order {
   display: flex;
   flex-direction: column;
   color: rgb(51, 51, 51);
@@ -101,24 +100,6 @@
 
 }
 
-.driver-header{
-  margin-top: 20px;
-}
-.driver-map-button{
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-button {
-  background:rgb(255, 207, 1);
-  padding: 10px 20px;
-  border-radius: 20px;
-  font-size: 20px;
-  border-color: white;
-  margin-right: 30px;
-  margin-left: 15px;
-}
-
 .driver-container {
   display: flex;
   flex-direction: column;
@@ -144,7 +125,6 @@ button {
   align-items: end;
 }
 
-
 .driver-map-button button {
   color: black;
   background-color: rgb(255, 207, 1);
@@ -158,7 +138,7 @@ button {
   margin-left: 10px;
 }
 
-.unaccepted-orders-sidebar {
+.driver-unaccepted-orders-sidebar {
   width: 40%;
   height: 70vh;
   overflow-y: auto;
@@ -172,16 +152,16 @@ button {
   scrollbar-color: #ada8a5 #c8cbc4;
 }
 
-.unaccepted-orders-sidebar::-webkit-scrollbar {
+.driver-unaccepted-orders-sidebar::-webkit-scrollbar {
   width: 11px;
 }
 
-.unaccepted-orders-sidebar::-webkit-scrollbar-track {
+.driver-unaccepted-orders-sidebar::-webkit-scrollbar-track {
   background: #c8cbc4;
   border-radius: 10px;
 }
 
-.unaccepted-orders-sidebar::-webkit-scrollbar-thumb {
+.driver-unaccepted-orders-sidebar::-webkit-scrollbar-thumb {
   background-color: #ada8a5;
   border-radius: 10px;
   border: 3px solid #c8cbc4;
@@ -193,7 +173,7 @@ button {
   border: 3px solid #c8cbc4;
 }
 
-.unaccepted-order {
+.driver-unaccepted-order {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -206,7 +186,7 @@ button {
 
 }
 
-.accept-order-button {
+.driver-accept-order-button {
   width: 30%;
   background-color: #28a745; 
   color: #ffffff;
@@ -218,11 +198,11 @@ button {
   font-size: 20px;
 }
 
-.accept-order-button:hover {
+.driver-accept-order-button:hover {
   background-color: #10ca2f;
 }
 
-.orders-container {
+.driver-orders-container {
   width: 100%;
   background-color: white;
   border-radius: 10px;
@@ -257,7 +237,7 @@ button {
   object-fit: contain;
 }
 
-.accepted-order{
+.driver-accepted-order{
   background-color: white;
   width: 100%;
   padding: 20px;
@@ -266,7 +246,7 @@ button {
 
 }
 
-.orders-container h2{
+.driver-orders-container h2{
   font-size: 32;
   margin: 26px;
   text-align: center;
