--- a/application/client/src/styles/Home.css
+++ b/application/client/src/styles/Home.css
@@ -362,7 +362,7 @@
     margin-top: 3px;
     margin-left: -10px;
     padding: 0;
-    color: #ffdc70;
+    color: #fc3;
 }
 
 
